--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </div>
         </div>
     </div>
-    <h1>Arslan Akmal</h1>
+    <h1>M Abu Baker</h1>
 <!-- Swiper -->
 <div class="swiper mySwiper">
     <div class="swiper-wrapper">
